--- a/home.html
+++ b/home.html
@@ -9,19 +9,24 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <!-- Latest compiled and minified bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   <!-- Optional theme bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Fork Awesome -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css"
+    integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
 
   <!-- Latest compiled and minified bootstrap -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
 
   <!-- Sweetalert2 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@1/dark.css">
@@ -31,10 +36,12 @@
 
   <!-- Github ribbon -->
   <a href="https://github.com/aznballer420/JavKing.github.io" class="github-corner" aria-label="View source on GitHub">
-    <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#23272A; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
+    <svg width="80" height="80" viewBox="0 0 250 250"
+      style="fill:#23272A; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-      <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor"
-        style="transform-origin: 130px 106px;" class="octo-arm"></path>
+      <path
+        d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+        fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
       <path
         d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
         fill="currentColor" class="octo-body"></path>
@@ -79,28 +86,54 @@
   <script type="text/javascript">
     backgroundEffect('canvas');
   </script>
-  <div class="mainblock">
-    <div class="top"> 
-      <a href="https://discordapp.com/api/oauth2/authorize?client_id=694655522237972510&permissions=8&scope=bot" target="_blank">
-        <img class="bigavatar" src="./images/JavKing_new_FINISHED.png"></a>
-    </div>
-    <div class="toptext">
-            <h1><span>JavKing</span></h1>
-      <h3><span>A Simple Musicbot</span><!--<span class="blue">Public BOT Closed</span>--></h3>
-    </div>
-    <div class="topbuttons">
-      <div>
-        <a class="wb_button" href="https://discordapp.com/invite/9zRAwwp" target="_blank">
-          <span>Discord server</span>
-        </a>
+  <div class="sfw_button" id="sfw_check">
+    <div class="middle">
+      <div class="top">
+        <div class="content">
+          <div class="toptext">
+            <div class="text" data-text="Select One"><span>Select One</span></div>
+          </div>
+        </div>
       </div>
-      <div>
-        <a class="wb_button" href="https://github.com/aznballer420/JavKing-Bot" target="_blank">
-          <span>GitHub Repository</span>
+      <div class="topbuttons">
+        <a class="wb_button" id="JavKing">
+          <span>JavKing</span>
+        </a>
+        <a class="wb_button" id="Zenpai">
+          <span>Zenpai</span>
         </a>
       </div>
     </div>
   </div>
+
+  <div class="javking">
+    <div class="mainblock">
+      <div class="top">
+        <a href="https://discordapp.com/api/oauth2/authorize?client_id=694655522237972510&permissions=8&scope=bot"
+          target="_blank">
+          <img class="bigavatar" src="./images/JavKing_new_FINISHED.png"></a>
+      </div>
+      <div class="toptext">
+        <h1><span>JavKing</span></h1>
+        <h3><span>A Simple Musicbot</span>
+          <!--<span class="blue">Public BOT Closed</span>-->
+        </h3>
+      </div>
+      <div class="topbuttons">
+        <div>
+          <a class="wb_button" href="https://discordapp.com/invite/9zRAwwp" target="_blank">
+            <span>Discord server</span>
+          </a>
+        </div>
+        <div>
+          <a class="wb_button" href="https://github.com/aznballer420/JavKing-Bot" target="_blank">
+            <span>GitHub Repository</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <footer id="footer">
     <div class="links">
       <div class="icon discord">
@@ -128,9 +161,24 @@
   <!-- main JS -->
   <script src="js/main.js"></script>
   <script>
-    $(window).on('load', function() {
+    $(window).on('load', function () {
       $('.loader-wrapper').fadeOut('slow');
+      $('.javking').hide();
+      $('.zenpai').hide();
     });
+
+    document.getElementById('JavKing').onclick = function () {
+      $('.sfw_button').fadeOut('slow', function () {
+        $('.javking').fadeIn('slow');
+      });
+    };
+
+    document.getElementById('Zenpai').onclick = function () {
+      $('.sfw_button').fadeOut('slow', function () {
+        $('.zenpai').fadeIn('slow');
+      });
+    };
+
   </script>
 
 </body>
