--- a/home.html
+++ b/home.html
@@ -125,7 +125,7 @@
                 <div class="project-text">
                     <div class="project-name">Yuuno</div>
                     <div class="project-description">
-                        Multipurpose Discord.js Bot with entertainment
+                        Multipurpose Discord.js Bot
                     </div>
                 </div>
             </div>
