--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -50,13 +51,13 @@
 
     <!-- Page info -->
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>JavKing</title>
+    <title>Zenpai</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Zenpai's official website.">
     <meta name="keywords" content="zenpai developer bot discord">
 
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="./images/JavKing_new_FINISHED.png" />
+    <link rel="icon" type="image/png" href="images/profile.png">
 
     <meta property="og:title" content="Zenpai.herokuapp.com">
     <meta property="og:description" content="Zenpai's Official Website.">
