--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
     <meta name="keywords" content="zenpai developer bot discord">
 
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="images/profile.png">
+    <link rel="shortcut icon" href="/images/profile.png" />
 
     <meta property="og:title" content="Zenpai.herokuapp.com">
     <meta property="og:description" content="Zenpai's Official Website.">
@@ -132,6 +132,29 @@
             </div>
         </div>
     </div>
+
+    <footer id="footer">
+        <div class="links">
+            <!-- <div class="bottom-nav"> -->
+                <div class="icon discord">
+                    <a href="#">
+                        <i class="fa fa-discord"></i>
+                    </a>
+                </div>
+                <div class="icon email">
+                    <a href="#">
+                        <i class="fa fa-envelope"></i>
+                    </a>
+                </div>
+                <div class="icon phone">
+                    <a href="#">
+                        <i class="fa fa-phone"></i>
+                    </a>
+                </div>
+            <!-- </div> -->
+            <!-- <span>Contact Me</span> -->
+        </div>
+    </footer>
 
     <div class="loading-wrapper">
         <div class="sk-cube-grid">
