--- a/projects/JavKing/home.html
+++ b/projects/JavKing/home.html
@@ -72,7 +72,7 @@
             </div>
             <div class="toptext">
                 <h1><span>JavKing</span></h1>
-                <h3><span>A Simple Musicbot</span>
+                <h3><span>A Simple Discord musicbot</span>
                     <!--<span class="blue">Public BOT Closed</span>-->
                 </h3>
             </div>
