--- a/projects/JavKing/home.html
+++ b/projects/JavKing/home.html
@@ -115,7 +115,7 @@
         <div class="links">
             <div class="icon discord">
                 <a href="https://discord.gg/EXQn6bcqGv" target="_blank">
-                    <i class="fab fa-discord"></i>
+                    <i class="fa fa-discord"></i>
                 </a>
             </div>
             <div class="icon github">
