fix svg, finalize javking

--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
 
 // Locate file link path
 //   function goToInternalLink(path) {
-//       var domain = 'http://javking-site.herokuapp.com';
+//       var domain = 'http://zenpai.herokuapp.com';
 //       window.location.href = domain + "/" + path;
 //   }
 </script>
@@ -166,7 +166,9 @@
 
     .cloud {
         width: 350px; height: 120px;
-        background-image: url("https://i.imgur.com/f6KQZ4q.png");
+        /* background-image: url("https://i.imgur.com/f6KQZ4q.png"); */
+        background-image: url('/images/profile_scaled.png');
+        background-size: 145px 145px;
         background: linear-gradient(top, #FFF 100%);
         background: -webkit-linear-gradient(top, #FFF 100%);
         background: -moz-linear-gradient(top, #FFF 100%);
@@ -186,7 +188,9 @@
     .cloud:after, .cloud:before {
         content: '';
         position: absolute;
-        background-image: url("https://i.imgur.com/g0Pi1hV.png");
+        /* background-image: url("https://i.imgur.com/g0Pi1hV.png"); */
+        background-image: url('/images/profile_scaled.png');
+        background-size: 140px 140px;
         z-index: -1
     }
 
