--- a/home.html
+++ b/home.html
@@ -9,6 +9,9 @@
     <!-- Axios -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
+    <!-- Moment -->
+    <script src="projects/Clock/js/moment.min.js"></script>
+
     <!-- Latest compiled and minified bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -33,7 +36,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@1/dark.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8/dist/sweetalert2.min.js"></script>
 
-    <script src="js/canvas.js"></script>
+    <script src="/js/canvas.js"></script>
 
     <!-- Github ribbon -->
     <a href="https://github.com/Zenwiwi/" class="github-corner" aria-label="View source on GitHub">
@@ -131,26 +134,47 @@
                 </div>
             </div>
         </div>
+        <div class="project">
+            <div class="project-container">
+                <div class="project-image">
+                    <a href="./projects/Clock/home.html">
+                        <div class="hero-circle">
+                            <div class="hero-face">
+                                <div id="hour" class="hero-hour"></div>
+                                <div id="minute" class="hero-minute"></div>
+                                <div id="second" class="hero-second"></div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="project-text">
+                    <div class="project-name">Digital Clock</div>
+                    <div class="project-description">
+                        Modern Digital Clock moment.js
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer id="footer">
         <div class="links">
             <!-- <div class="bottom-nav"> -->
-                <div class="icon discord">
-                    <a href="https://discord.gg/EXQn6bcqGv">
-                        <i class="fa fa-discord"></i>
-                    </a>
-                </div>
-                <div class="icon email">
-                    <a href="mailto:simonly976@gmail.com">
-                        <i class="fas fa-envelope"></i>
-                    </a>
-                </div>
-                <div class="icon insta">
-                    <a href="https://www.instagram.com/yl.simom">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                </div>
+            <div class="icon discord">
+                <a href="https://discord.gg/EXQn6bcqGv">
+                    <i class="fa fa-discord"></i>
+                </a>
+            </div>
+            <div class="icon email">
+                <a href="mailto:simonly976@gmail.com">
+                    <i class="fas fa-envelope"></i>
+                </a>
+            </div>
+            <div class="icon insta">
+                <a href="https://www.instagram.com/yl.simom">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </div>
             <!-- </div> -->
             <!-- <span>Contact Me</span> -->
         </div>
@@ -171,7 +195,7 @@
     </div>
 
     <!-- main JS -->
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
     <script>
         $(window).on('load', function () {
             setTimeout(() => {
@@ -183,7 +207,7 @@
             }, 500);
         });
     </script>
-    <script src="node_modules/animejs/lib/anime.min.js"></script>
+    <script src="./js/anime.min.js"></script>
     <script src="/js/script.js"></script>
     <script>
         const svgPaths = document.querySelectorAll('.line-drawing .lines path');
