add: misc things

--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
     <meta name="description" content="Zenpai's official website.">
     <meta name="keywords" content="zenpai developer bot discord">
 
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="/images/profile.png" />
 
     <meta property="og:title" content="Zenpai.herokuapp.com">
