--- a/projects/Clock/home.html
+++ b/projects/Clock/home.html
@@ -4,8 +4,14 @@
 <head>
     <link href="./css/styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+
+    <link rel="shortcut icon" href="https://momentjs.com/static/img/moment-favicon.png">
+
+    <title>Clock</title>
+
     <script src="./js/time.js"></script>
     <script src="./js/moment.min.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
