--- a/home.html
+++ b/home.html
@@ -148,7 +148,7 @@
                     </a>
                 </div>
                 <div class="project-text">
-                    <div class="project-name">Digital Clock</div>
+                    <div class="project-name clock">Digital Clock</div>
                     <div class="project-description">
                         Modern Digital Clock moment.js
                     </div>
