Fix: open link in new tab

--- a/home.html
+++ b/home.html
@@ -109,7 +109,7 @@
         <div class="project">
             <div class="project-container">
                 <div class="project-image">
-                    <a href="./projects/JavKing/home.html" target="_blank">
+                    <a href="./projects/JavKing/home.html" target="_new">
                         <img src="images/JavKing.png">
                     </a>
                 </div>
@@ -137,7 +137,7 @@
         <div class="project">
             <div class="project-container">
                 <div class="project-image">
-                    <a href="./projects/Clock/home.html" target="_blank">
+                    <a href="./projects/Clock/home.html" target="_new">
                         <div class="hero-circle">
                             <div class="hero-face">
                                 <div id="hour" class="hero-hour"></div>
