--- a/wip.html
+++ b/wip.html
@@ -106,53 +106,13 @@
         </div>
     </div>
     <div class="container">
-        <div class="project">
-            <div class="project-container">
-                <div class="project-image">
-                    <a href="./projects/JavKing/home.html" target="_new">
-                        <img src="images/JavKing.png">
-                    </a>
-                </div>
-                <div class="project-text">
-                    <div class="project-name">JavKing</div>
-                    <div class="project-description">
-                        Discord Music Bot written with JDK implementing Lavaplayer
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class="project-container">
-                <div class="project-image">
-                    <img src="images/Yuuno.png">
-                </div>
-                <div class="project-text">
-                    <div class="project-name">Yuuno</div>
-                    <div class="project-description">
-                        Multipurpose Discord.js Bot
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class="project-container">
-                <div class="project-image">
-                    <a href="./projects/Clock/home.html" target="_new">
-                        <div class="hero-circle">
-                            <div class="hero-face">
-                                <div id="hour" class="hero-hour"></div>
-                                <div id="minute" class="hero-minute"></div>
-                                <div id="second" class="hero-second"></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="project-text">
-                    <div class="project-name clock">Digital Clock</div>
-                    <div class="project-description">
-                        Modern Digital Clock moment.js
-                    </div>
-                </div>
+        <div class="clearfix float-children">
+            <a href="/projects/JavKing/home.html" target="_new">
+                <img src="/images/JavKing.png">
+            </a>
+            <div>
+                <h4>JavKing</h4>
+                Discord Music Bot written with JDK implementing Lavaplayer
             </div>
         </div>
     </div>
@@ -207,7 +167,7 @@
             }, 500);
         });
     </script>
-    <script src="/js/anime.min.js"></script>
+    <script src="./js/anime.min.js"></script>
     <script src="/js/script.js"></script>
     <script>
         const svgPaths = document.querySelectorAll('.line-drawing .lines path');
